--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "nodemon": "^1.19.1"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "engines": {
     "node": "10.x"
