--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1",
-    "nodemon": "^1.19.1"
+    "mysql2": "^1.6.5",
+    "nodemon": "^1.19.1",
+    "sequelize": "^5.12.3"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon --exec babel-node server.js",
+    "build": "cross-env NODE_ENV=production"
   },
   "engines": {
     "node": "10.x"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.0"
   }
 }
