--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ APP_PORT=8000
 
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=nodedatabase
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=doctytekdatabase
+DB_USERNAME=postgres
+DB_PASSWORD=root
 
 NODE_ENV=development
