--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
-    "sequelize": "^5.12.3"
+    "sequelize": "^5.12.3",
+    "sequelize-cli": "^5.5.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node server.js",
