--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "sequelize-cli": "^5.5.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node server.js",
+    "start": "nodemon  server.js",
     "build": "cross-env NODE_ENV=production"
   },
   "engines": {
