--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
@@ -18,13 +15,16 @@
     "sequelize-cli": "^5.5.0"
   },
   "scripts": {
-    "start": "nodemon  server.js",
-    "build": "cross-env NODE_ENV=production"
+    "start": "nodemon dist/server.js",
+    "build": "babel server.js -d dist"
   },
   "engines": {
     "node": "10.x"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "cross-env": "^5.2.0"
   }
 }
