--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "sequelize-cli": "^5.5.0"
   },
   "scripts": {
-    "start": "nodemon dist/server.js",
+    "start": "nodemon server.js",
     "build": "babel server.js -d dist"
   },
   "engines": {
