--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mysql2": "^1.6.5",
-    "nodemon": "^1.19.1",
     "pg": "^7.12.1",
     "sequelize": "^5.12.3",
     "sequelize-cli": "^5.5.0"
   },
   "scripts": {
     "start": "nodemon server.js",
-    "build": "babel server.js -d dist"
+    "build": "webpack --config webpack.config.js"
   },
   "engines": {
     "node": "10.x"
@@ -25,6 +25,9 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "nodemon": "^1.19.1",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6"
   }
 }
